<resources>
    <string name="app_name">ClothingStore</string>
    <string name="clothing_detail">Clothing Detail</string>
    <string name="no_internet_message">"Please check your Internet connection"</string>
    <string name="error_message">Error in Fetching the ClothingList</string>
    <string name="unknown_error_message">Unknown Error</string>
    <string name="title_clothing_list_fragment">Clothing List</string>

    <string name="description">Description : %1s</string>
    <string name="address">Address : %1s</string>
    <string name="international_shipping_cost">Shipping International : %1s€</string>
    <string name="national_shipping_cost">Shipping National : %1s€</string>
    <string name="hand_delivery">Hand delivery : %1s</string>
    <string name="published_date">Published on : %1s</string>
    <string name="price_amount">Price : %.0f€</string>
    <string name="shipping_cost">National shipping cost: %.0f€</string>
</resources>